lab5-opa-gatekeeper-aks/gatekeeper/constraints/custom-deny-privilege-escalation.yaml
# gatekeeper/constraints/custom-deny-privilege-escalation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: deny-privilege-escalation
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowPrivilegeEscalation: false
