lab5-opa-gatekeeper-aks/gatekeeper/constraints/pss-baseline-dryrun.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSS
metadata:
  name: pss-baseline-dryrun
spec:
  enforcementAction: dryrun
  parameters:
    level: baseline
