lab5-opa-gatekeeper-aks/gatekeeper/constraints/pss-restricted.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSS
metadata:
  name: pss-restricted
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    level: restricted
